src/main/java/com/example/model_predict/utils/Error/ErrorData.java
package com.example.model_predict.utils.Error;

import lombok.AllArgsConstructor;
import lombok.Data;

/**
 * @author Dr.Awe
 * @date 2024-07-25 15:27
 */

@Data
@AllArgsConstructor
public class ErrorData {
    private String errCode;
    private String message;
}

